# render_swiper

./: .gitignore  README.md  pyproject.toml
api/: definitions.yaml
client/: webpack.config.js
client/src/: index.jsx
client/src/swiper/react/: swiper.tsx  swiperslide.tsx
lib/: index.html  package-lock.json  package.json  webpack.config.js
lib/src/: index.jsx
render_swiper/: __init__.py  definitions.py
render_swiper/client/: webpack.config.js
