[tool.poetry]
name = "render-swiper"
version = "0.6.0"
description = "Render binding for Swiper"
authors = ["fdv1 <francois@pytek.io>"]
readme = "README.md"
packages = [{include = "render_swiper"}]
include = [{path = "render_swiper/js/*.*"}]
exclude = ["render_swiper/client", ".python-version"]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
